# study-assistant

./: .gitignore  README.md  ingestion_loader.py  pyproject.toml  template.html.j2
src/study_assistant/: __init__.py  config.py
src/study_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/study_assistant/cli/: __init__.py  main.py
src/study_assistant/embeddings/: __init__.py  encoder.py
src/study_assistant/ingestion/: __init__.py  pipeline.py
src/study_assistant/llm/: __init__.py  engine.py
src/study_assistant/rag/: __init__.py  chain.py  prompts.py
src/study_assistant/renderer/: __init__.py  html_renderer.py  pdf_exporter.py
src/study_assistant/vectorstore/: __init__.py  store.py
